fixed copyright symbol and body scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,8 +62,9 @@ ul {
 #copyright {
   text-align: right;
   font-size: 14px;
-  margin-bottom: 8px;
+  margin-bottom: 6px;
   margin-left: 10px;
+  margin-right: 10px;
   color: rgba(152, 152, 152, 0.3);
 }
 
@@ -178,6 +179,16 @@ ul {
 .carousel-item::-webkit-scrollbar-track {
   width: 1px;
   background: rgba(152, 152, 152, 0);
+}
+
+body::-webkit-scrollbar,
+body::-webkit-scrollbar-track {
+  width: 1px;
+  background: rgba(152, 152, 152, 0);
+}
+
+body::-webkit-scrollbar-thumb {
+  background: rgba(152, 152, 152, 0.15);
 }
 
 .carousel-item::-webkit-scrollbar-thumb {
